W6D2 HW revise responsive navbar-expand-md

--- a/home.html
+++ b/home.html
@@ -22,7 +22,7 @@
 
 <!--header-->
     <header>
-        
+<!--inactive
         <div class="main-header">
             <div class="logo">
                 <img src="images/logo.png" alt="Great Cliffs Logo" width="125"> 
@@ -38,10 +38,11 @@
                 </ul>
             </nav>
         </div>
+-->
 
 
     <div class = "container">
-        <nav class="navbar navbar-expand-sm navbar-light bg-transparent">
+        <nav class="navbar navbar-expand-md navbar-light bg-transparent">
         <div class="logo">
            <a class="navbar-brand" href="#"> <img src="images/logo.png" alt="Great Cliffs Logo" width="125"> </a>
         </div>
