--- a/home.html
+++ b/home.html
@@ -22,7 +22,7 @@
 
 <!--header-->
     <header>
-<!--inactive
+<!--deactive
         <div class="main-header">
             <div class="logo">
                 <img src="images/logo.png" alt="Great Cliffs Logo" width="125"> 
@@ -44,7 +44,7 @@
     <div class = "container">
         <nav class="navbar navbar-expand-md navbar-light bg-transparent">
         <div class="logo">
-           <a class="navbar-brand" href="#"> <img src="images/logo.png" alt="Great Cliffs Logo" width="125"> </a>
+           <a class="navbar-brand" href="#"> <img src="images/logo.png" alt="Great Cliffs Logo" width="100"> </a>
         </div>
 
            <!-- Hamburger Menu -->
