--- a/home.html
+++ b/home.html
@@ -7,11 +7,13 @@
 
 <!--Font Awesome-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<!--Link to CSS-->
-    <link rel="stylesheet" href="style.css">
 
 <!-- Bootstrap CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+
+<!--Link to CSS-->
+<link rel="stylesheet" href="style.css">
+
 
 </head>
 
@@ -32,7 +34,7 @@
             <nav class="main-menu">
                 <ul>
                     <li class="active"><a href="home.html">Home</a></li>
-                    <li><a href="cliffs.html">Cliffs</a></li>
+                    <li><a href="cliffs.html">Cliffs</a></li›>
                     <li><a href="activities.html">Activities</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
