--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,10 @@
     <title>Document</title>
 <!--Font Awesome-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+<!-- Bootstrap CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+
 <!--Link to CSS-->
     <link rel="stylesheet" href="style.css">
 </head>
@@ -36,7 +40,7 @@
 
     <!--Main Content-->
     <main class="main-content">
-    <h1>Contacting Us</h1>
+    <h2>Contacting Us</h2>
     <p>
     You can drop by the visitors information center at the cliff site that you plan on visiting. They are open
     7 days a week from 8.00AM to 5.00PM. You can also contact us directly if you need additional information about 
@@ -108,18 +112,15 @@
 </main>
     
     <!--section-->
-    <section>
-        <ul id="partners">
-            <!--
-            <li class="partner"><img src="images/partners/partner-bustour.png" alt="Partner Bus Tours"></li>
-            <li class="partner"><img src="images/partners/partner-cabinrental.png" alt="Partner Cabin Rental"></li>
-            <li class="partner"><img src="images/partners/partner-campingadv.png" alt="Partner Camping Adenture"></li>
-            <li class="partner"><img src="images/partners/partner-collegetours.png" alt="Partner College Tours"></li>
-            <li class="partner"><img src="images/partners/partner-rentalbike.png" alt="Partner Bike Rentals"></li>
-            <li class="partner"><img src="images/partners/partner-tourgroup.png" alt="Partner Tour Group"></li>
-            -->
-        </ul>
-        </div>
+  <section>
+    <ul id="partners">
+        <li class="partner col-6 col-sm-4 col-md-3 col-lg-2"><img src="images/partners/partner-bustour.png" alt="Partner Bus Tours"></li>
+        <li class="partner col-6 col-sm-4 col-md-3 col-lg-2"><img src="images/partners/partner-cabinrental.png" alt="Partner Cabin Rental"></li>
+        <li class="partner col-6 col-sm-4 col-md-3 col-lg-2"><img src="images/partners/partner-campingadv.png" alt="Partner Camping Adenture"></li>
+        <li class="partner col-6 col-sm-4 col-md-3 col-lg-2"><img src="images/partners/partner-collegetours.png" alt="Partner College Tours"></li>
+        <li class="partner col-6 col-sm-4 col-md-3 col-lg-2"><img src="images/partners/partner-rentalbike.png" alt="Partner Bike Rentals"></li>
+        <li class="partner col-6 col-sm-4 col-md-3 col-lg-2"><img src="images/partners/partner-tourgroup.png" alt="Partner Tour Group"></li>
+    </ul>
     </section>
 
     <!--Footer-->
@@ -138,9 +139,14 @@
     </footer>
 </div>
 
-    <!--Partners-->
-    <script src="js/site_scripts.js"></script>
-    <script src="js/randomcodes.js"></script>
+   <!--Partners
+<script src="js/site_scripts.js"></script>
+-->
+
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
 </body>
 </html>
