--- a/home.html
+++ b/home.html
@@ -105,12 +105,12 @@
 <!--section-->
     <section>
         <ul id="partners">
-            <li class="partner"><img src="images/partners/partner-bustour.png" alt="Partner Bus Tours"></li>
-            <li class="partner"><img src="images/partners/partner-cabinrental.png" alt="Partner Cabin Rental"></li>
-            <li class="partner"><img src="images/partners/partner-campingadv.png" alt="Partner Camping Adenture"></li>
-            <li class="partner"><img src="images/partners/partner-collegetours.png" alt="Partner College Tours"></li>
-            <li class="partner"><img src="images/partners/partner-rentalbike.png" alt="Partner Bike Rentals"></li>
-            <li class="partner"><img src="images/partners/partner-tourgroup.png" alt="Partner Tour Group"></li>
+            <li class="partner col-6 col-sm-4 col-md-3 col-lg-2"><img src="images/partners/partner-bustour.png" alt="Partner Bus Tours"></li>
+            <li class="partner col-6 col-sm-4 col-md-3 col-lg-2"><img src="images/partners/partner-cabinrental.png" alt="Partner Cabin Rental"></li>
+            <li class="partner col-6 col-sm-4 col-md-3 col-lg-2"><img src="images/partners/partner-campingadv.png" alt="Partner Camping Adenture"></li>
+            <li class="partner col-6 col-sm-4 col-md-3 col-lg-2"><img src="images/partners/partner-collegetours.png" alt="Partner College Tours"></li>
+            <li class="partner col-6 col-sm-4 col-md-3 col-lg-2"><img src="images/partners/partner-rentalbike.png" alt="Partner Bike Rentals"></li>
+            <li class="partner col-6 col-sm-4 col-md-3 col-lg-2"><img src="images/partners/partner-tourgroup.png" alt="Partner Tour Group"></li>
         </ul>
     </section>
 
