--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,10 @@
 <!-- Bootstrap CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
+<!-- Bootstrap Font Icon CSS -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+
+
 <!--Link to CSS-->
     <link rel="stylesheet" href="style.css">
 </head>
@@ -102,8 +106,15 @@
         <p id="codes"></p>
     </div>
 
+    <!--
     <div class="button">
         <input id="submit" type="submit" value="Inquire">
+    </div>
+    -->
+    
+
+    <div class="bs-example">
+        <button id="submit" type="submit" class="btn btn-primary"><span class="bi-cloud"></span> Inquire </button>
     </div>
 
     </div>
@@ -142,6 +153,8 @@
    <!--Partners
 <script src="js/site_scripts.js"></script>
 -->
+<script src="js/randomcodes.js"></script>
+
 
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
