--- a/activities.html
+++ b/activities.html
@@ -46,7 +46,7 @@
     
     
         <div class = "container">
-            <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
+            <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
             <div class="logo">
                <a class="navbar-brand" href="#"> <img src="images/logo.png" alt="Great Cliffs Logo" width="100"> </a>
             </div>
