--- a/contact.html
+++ b/contact.html
@@ -110,22 +110,22 @@
     <form action="/contact" method="post">  
     <fieldset>  
     <legend class="legend">Contact Form</legend>
-    <div class="textbox">
+    <div class="textbox form-group">
         <label>Name:</label> 
-        <input type="text" name="name" placeholder="John Doe">  
+        <input type="text" class="form-control" name="name" placeholder="John Doe">  
         <label>Email:</label>  
-        <input type="email" name="email" placeholder="johndoe@gmail.com"> 
+        <input type="email" class="form-control" name="email" placeholder="johndoe@gmail.com"> 
         <label>Phone:</label>
-        <input type="text" name="phone" placeholder="xxx-xxx-xxxx"> 
+        <input type="text" class="form-control" name="phone" placeholder="xxx-xxx-xxxx"> 
     </div>
     
-    <div class="radios">
+    <div class="radios form-group">
         <label>How should we contact you?</lable>
             <input type="radio" name="contact" value="email"> <span> Email <span>
             <input type="radio" name="contact" value="phone"> <span >Phone <span>
     </div>
 
-    <div class="selectmenu">
+    <div class="selectmenu form-group">
         <label>Which Cliff are you inquiring?</lable>  
         <select class="option_cliff">
             <option>West Cliff</option>
@@ -135,15 +135,17 @@
         </select>
     </div>
     
-    <div class="commentbox">
+    <div class="commentbox form-group">
         <label>How did you hear about us:</label>  
         <textarea></textarea>
     </div>
 
     <!--Random Codes-->
-    <div class="randomcode">
-        <input id="codeentered" type="text" name="randomcode" placeholder="Enter characters">
+    <div class="randomcode form-group form-check">
+        <label class="form-check-label">
+        <input id="codeentered" class="form-check-input" type="text" name="randomcode" placeholder="Enter characters">
         <p id="codes"></p>
+        </label>
     </div>
 
     <!--
