w7d2 HW activities table responsive

--- a/activities.html
+++ b/activities.html
@@ -6,13 +6,14 @@
     <title>Document</title>
 
 <!--Font Awesome-->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <!-- Bootstrap CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
+
 <!--Link to CSS-->
-<link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
 
 <!--Link jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -90,7 +91,7 @@
             These activities are not however run by the state park and recreational department. They are operated and manage by private vendors but are partners with the state department.  
             Therefore, for schedule inquiries or information, please contact them directly. For a list of activities, please refer to the table below:</p>
         
-        <table class="activities_class">
+        <table class="activities_class table table-responsive">
             <caption>Activities at the Cliffs</caption>
                 <thead>
                     <tr>
@@ -154,17 +155,17 @@
 
     </main>
 
-  <!--section-->
-  <section>
-    <ul id="partners">
-        <li class="partner col-6 col-sm-4 col-md-3 col-lg-2"><img src="images/partners/partner-bustour.png" alt="Partner Bus Tours"></li>
-        <li class="partner col-6 col-sm-4 col-md-3 col-lg-2"><img src="images/partners/partner-cabinrental.png" alt="Partner Cabin Rental"></li>
-        <li class="partner col-6 col-sm-4 col-md-3 col-lg-2"><img src="images/partners/partner-campingadv.png" alt="Partner Camping Adenture"></li>
-        <li class="partner col-6 col-sm-4 col-md-3 col-lg-2"><img src="images/partners/partner-collegetours.png" alt="Partner College Tours"></li>
-        <li class="partner col-6 col-sm-4 col-md-3 col-lg-2"><img src="images/partners/partner-rentalbike.png" alt="Partner Bike Rentals"></li>
-        <li class="partner col-6 col-sm-4 col-md-3 col-lg-2"><img src="images/partners/partner-tourgroup.png" alt="Partner Tour Group"></li>
-    </ul>
-    </section>
+    <!--section-->
+    <section>
+        <ul id="partners">
+            <li class="partner col-6 col-sm-4 col-md-3 col-lg-2"><img src="images/partners/partner-bustour.png" alt="Partner Bus Tours"></li>
+            <li class="partner col-6 col-sm-4 col-md-3 col-lg-2"><img src="images/partners/partner-cabinrental.png" alt="Partner Cabin Rental"></li>
+            <li class="partner col-6 col-sm-4 col-md-3 col-lg-2"><img src="images/partners/partner-campingadv.png" alt="Partner Camping Adenture"></li>
+            <li class="partner col-6 col-sm-4 col-md-3 col-lg-2"><img src="images/partners/partner-collegetours.png" alt="Partner College Tours"></li>
+            <li class="partner col-6 col-sm-4 col-md-3 col-lg-2"><img src="images/partners/partner-rentalbike.png" alt="Partner Bike Rentals"></li>
+            <li class="partner col-6 col-sm-4 col-md-3 col-lg-2"><img src="images/partners/partner-tourgroup.png" alt="Partner Tour Group"></li>
+        </ul>
+        </section>
 
     <!--Footer-->
     <footer>
@@ -182,16 +183,9 @@
     </footer>
 </div>
 
-<!--Partners
-<script src="js/site_scripts.js"></script>
--->
-
-<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-
-<script src="js/activity.js"></script>
+    <!--Partners
+    <script src="js/site_scripts.js"></script>
+    -->
 
 </body>
 </html>
