--- a/contact.html
+++ b/contact.html
@@ -141,7 +141,7 @@
     </div>
 
     <!--Random Codes-->
-    <div class="randomcode form-group form-check">
+    <div class="randomcode form-group form-inline form-check">
         <label class="form-check-label">
         <input id="codeentered" class="form-check-input" type="text" name="randomcode" placeholder="Enter characters">
         <p id="codes"></p>
